# armoth-e

./: armoth-e.py  armoth-e_plot.py  cycloidal_drive_equations.md  cycloidal_drive_equations_generator.py  kinematic_calculator.py  notes.txt  plot_cycloid.py  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
old/: armoth-e_plot.py
scripts/: cycloidal_drive_equations_generator.py  kinematic_calculator.py  plot_cycloid.py
