[tool.poetry]
name = "armoth-e"
version = "1.0.0"
description = "Core codebase of armoth-e"
authors = ["MadLadNadz <nadigvishal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
machine = "^0.0.1"
numpy = "^1.22.2"
robotics-sympy = "^1.0.0"
sympy = "^1.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
machine = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
